<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mates</string>
    <string name="initButtonIn">Sign in Mates</string>
    <string name="initButtonOn">Sign on</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log_on">LogOn</string>
    <string name="loginFacebookButton">Sign in with Facebook</string>
    <string name="forget"> Forget?</string>
    <string name="password"> Password</string>
    <string name="username">Username</string>
    <string name="or">OR</string>
    <string name="email">E-mail</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="onLog">Log on</string>
    <string name="title_activity_users_main_page">UsersMainPage</string>
    <string name="title_activity_user_main">UserMain</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_logued_user">LoguedUser</string>
    <string name="title_activity_log_out">LogOut</string>
    <string name="title_activity_log_ok">LogOk</string>
    <string name="title_activity_detailedinfo">Detailedinfo</string>
    <string name="Mate">Mate</string>
    <string name="No">No</string>
    <string name="zero">0</string>
    <string name="title_activity_map_location_gps">MapLocationGPS</string>
    <string name="title_activity_initial_chat">InitialChatActivity</string>
    <string name="title_activity_animation">Animation</string>
    <string name="title_activity_anim">Anim</string>
    <string name="title_activity_canvas">Canvas</string>
    <string name="title_activity_photo_gallery">PhotoGallery</string>
    <string name="desc">imagen</string>
    <string name="title_activity_chat">Chat</string>
    <string name="logMates">Log in Mates with Facebook</string>
    <string name="app_id">693428864054184</string>
    <string name="title_activity_choose_photos">ChoosePhotos</string>
    <string name="title_activity_choose_photo">ChoosePhoto</string>
    <string name="title_activity_post_try">PostTry</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="title_activity_proba_gps">ProbaGPS</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="radius">GPS radius</string>
    <string name="gender">Gender</string>
    <string name="interested_in">Interested in</string>
</resources>
